# mrhscrypto

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: throughput.py
docs/: api.md  quickstart.md
src/MRHScrypto/: __init__.py  __main__.py  api.py  exceptions.py  hashing.py  keys.py  matrices.py  mrhs_types.py  scheme.py  serialization.py  solver.py  validator.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/mrhscrypto/: keys.py  parameters.py  scheme.py  serialization.py  solver.py
src/mrhscrypto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_keys.py  test_scheme.py  test_serialization.py
